# aws-requests-auth-stubs

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
aws-requests-auth-stubs/: boto_utils.pyi
aws_requests_auth-stubs/: aws_auth.pyi  boto_utils.pyi
