[metadata]
name = aws-requests-auth-stubs
version = 0.4.3
url = https://github.com/YonatanGreenfeld/aws-requests-auth-stubs
author = Yonatan Greenfeld
author_email = yonatangreenfeld97@gmail.com

[options]
packages =
    aws-requests-auth-stubs
install_requires =
    aws-requests-auth>=0.4.3
    botocore-stubs>=1.27.42
    tying_extensions; python_version <= '3.8'
python_requires = >=3.7
package_dir =
    =aws-requests-auth-stubs

[options.package_data]
aws-requests-auth-stubs =
    __init__.pyi
    aws_auth.pyi
    boto_utils.pyi
